# recipes

./: .gitignore  Dockerfile  README.md  Tools.md  utils.hpp
clippings/: README.md  pack2.c
cloud/: docker.md  k8s.md  pod-sourcegraph.yaml
cloud/monitoring/: prometheus.yml
cloud/sshd_server/: Dockerfile
docs/: conf.py  index.rst
go/: Go_notes.md  misc.go  notes.sql  read_write_files.go  utils.go
go/http_middlewares/: main.go  middlewares.go  parallel_requests.py
hiredis/: CMakeLists.txt  py_pub.py  redis_client.cc  redis_client.h
microservice/: README.md  k8s.md
microservice/monitoring/: docker-compose.yml
net/: README.md  tcpdump.md
python/: config.py  resource_usage.py  spinner.py  utils.py
readings/: Readings.md
scripts/: format-diff.sh  one-liner.md  pre-commit  ssh_exec.py  zshrc
thrift/: CMakeLists.txt  hello.thrift  hello_client.cc  hello_server.cc
